# Budget-App

./: .gitignore  Dockerfile  Gemfile  docker-compose.yml  pyproject.toml
K8s/: Ingress.yml  PostgreSQLService.yml  PostgreSQLStatefulSet.yml  RailsApplicationDeployment.yml  RailsService.yml  migrations-job.yaml  namespace.yml
budget-app-gitops/apps/: argocd-cm-latest.yaml  budget-app.yaml
budget-app-gitops/argocd/: argocd-cm-backup.yaml  argocd-cm.yaml  argocd-rbac-cm.yaml  repo-config.yaml
budget-app-gitops/manifests/: ingress.yaml  namespace.yaml
budget-app-gitops/manifests/postgres/: service.yaml  statefulset.yaml
budget-app-gitops/manifests/rails/: deployment.yaml  service.yaml
config/: database.yml
